<resources>
    <string name="app_name">placavi</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_update">Actualizar</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_description">Descripcion</string>
    <string name="product_stock">Stock</string>
    <string name="product_price">Precio</string>
    <string name="product_category">Categoria</string>
    <string name="btn_add">Crear</string>
    <string name="product_newname">Nombre del producto</string>
    <string name="product_newdescription">Descripcion</string>
    <string name="product_newstock">Stock</string>
    <string name="product_newprice">Precio</string>
    <string name="product_newcategory">Categoria</string>
</resources>
